[gd_scene load_steps=8 format=1]

[ext_resource path="res://script/NewGame.gd" type="Script" id=1]
[ext_resource path="res://gfx/gui/menu-background.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/Shadow.png" type="Texture" id=3]
[ext_resource path="res://gfx/gui/frame.png" type="Texture" id=4]
[ext_resource path="res://font/montserrat/Montserrat-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]

font/size = 16
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]

font/size = 16
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 5 )

[node name="NewGame" type="Node"]

script/script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]

transform/pos = Vector2( 640, 480 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 670.551, 840.922 )
transform/scale = Vector2( 2.61689, 0.707945 )
texture = ExtResource( 3 )

[node name="Frame" type="Sprite" parent="."]

transform/pos = Vector2( 664.857, 445.939 )
texture = ExtResource( 4 )

[node name="Container" type="Node2D" parent="."]

transform/pos = Vector2( 444.802, 53.4458 )
transform/scale = Vector2( 2, 2 )

[node name="LanguageLabel" type="Label" parent="Container"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 77.0
margin/right = 119.0
margin/bottom = 98.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Language:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DictionaryLabel" type="Label" parent="Container"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 137.0
margin/right = 123.0
margin/bottom = 158.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Dictionary:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AlphabetLabel" type="Label" parent="Container"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 197.0
margin/right = 117.0
margin/bottom = 218.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Alphabet:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ConfirmButton" type="Button" parent="Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 112.0
margin/top = 270.0
margin/right = 188.0
margin/bottom = 297.0
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Confirm"
flat = false

[node name="BackButton" type="Button" parent="Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 270.0
margin/right = 103.0
margin/bottom = 297.0
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[node name="AlphabetOptionButton" type="OptionButton" parent="Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 220.0
margin/right = 188.0
margin/bottom = 247.0
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="DictionaryOptionButton" type="OptionButton" parent="Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 160.0
margin/right = 188.0
margin/bottom = 187.0
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="LanguageOptionButton" type="OptionButton" parent="Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 100.0
margin/right = 188.0
margin/bottom = 127.0
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[connection signal="pressed" from="Container/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]

[connection signal="pressed" from="Container/BackButton" to="." method="_on_BackButton_pressed"]

[connection signal="item_selected" from="Container/LanguageOptionButton" to="." method="_on_LanguageOptionButton_item_selected"]


